Correction tablet/pc

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,12 +15,11 @@
   }
 }
 body {
-  margin: 0;
-  min-height: 100vh;
+  min-width: 320px;
   display: grid;
   grid-template-rows: auto auto auto;
+  margin: 0;
 }
-
 
 h1, h2, h3, p {
   margin: 0;
@@ -93,7 +92,7 @@ footer .footer__block .footer__items {
   display: flex;
   justify-content: space-between;
 }
-@media screen and (max-width: 630px) {
+@media screen and (min-width: 630px) {
   footer .footer__block .footer__items {
     flex-wrap: wrap;
   }
@@ -101,7 +100,7 @@ footer .footer__block .footer__items {
 footer .footer__block .footer__items .footer__item {
   color: white;
 }
-@media screen and (max-width: 630px) {
+@media screen and (min-width: 630px) {
   footer .footer__block .footer__items .footer__item {
     margin-top: 10px;
     width: 100%;
@@ -195,7 +194,7 @@ footer .footer__block .footer__items .footer__item {
 .menu .menu__block .menu__description .menu__items {
   display: flex;
 }
-@media screen and (max-width: 1255px) {
+@media screen and (min-width: 1255px) {
   .menu .menu__block .menu__description .menu__items {
     flex-wrap: wrap;
   }
@@ -390,7 +389,6 @@ footer .footer__block .footer__items .footer__item {
 .howitworks .howitworks__title {
   margin: 0 20px 10px 20px;
   font-size: 23px;
-  flex-wrap: wrap;
 }
 .howitworks .howitworks__items {
   display: flex;
@@ -450,9 +448,8 @@ footer .footer__block .footer__items .footer__item {
   background-color: #F4F4F4;
 }
 #restaurants .restaurants__block {
-  max-width: 1350px;
+  border: 2px #6088a8;
   padding: 40px 0 40px 0;
-  margin: auto;
 }
 #restaurants .restaurants__block .restaurants__title {
   margin: 0 20px 10px 20px;
@@ -461,37 +458,42 @@ footer .footer__block .footer__items .footer__item {
 #restaurants .restaurants__block .restaurants__items {
   background-color: #F4F4F4;
   display: flex;
+  flex-wrap: wrap;
 }
 @media screen and (max-width: 955px) {
-  #restaurants .restaurants__block .restaurants__items {
+  #restaurants .restaurants__block {
     flex-wrap: wrap;
   }
 }
-#restaurants .restaurants__block .restaurants__items .restaurants__item {
+#restaurants .restaurants__block .restaurants__item {
   background-color: white;
   border-radius: 20px;
   height: 250px;
-  width: 100%;
-  margin: 20px;
+  width: 40%;
+  margin: 10px;
+  margin-left: auto;
+  margin-right: auto;
   box-shadow: 0 0 16px 0 rgba(119, 119, 119, 0.3);
 }
-@media screen and (max-width: 955px) {
-  #restaurants .restaurants__block .restaurants__items .restaurants__item {
+@media screen and (min-width: 955px) and (max-width: 955px) {
+  #restaurants .restaurants__block .restaurants__item {
     margin-bottom: 0;
+    width: 40%;
+    box-sizing: border-box;
   }
 }
-#restaurants .restaurants__block .restaurants__items .restaurants__item .restaurants__img {
+#restaurants .restaurants__block .restaurants__item .restaurants__img {
   width: 100%;
   height: 180px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   object-fit: cover;
 }
-#restaurants .restaurants__block .restaurants__items .restaurants__item .restaurants__description {
+#restaurants .restaurants__block .restaurants__item .restaurants__description {
   margin: 10px 20px 10px 20px;
   position: relative;
 }
-#restaurants .restaurants__block .restaurants__items .restaurants__item .restaurants__description .restaurants__badge {
+#restaurants .restaurants__block .restaurants__item .restaurants__description .restaurants__badge {
   position: absolute;
   height: 30px;
   width: 80px;
@@ -502,15 +504,15 @@ footer .footer__block .footer__items .footer__item {
   text-align: center;
   line-height: 30px;
 }
-#restaurants .restaurants__block .restaurants__items .restaurants__item .restaurants__description .restaurants__name {
+#restaurants .restaurants__block .restaurants__item .restaurants__description .restaurants__name {
   font-weight: bold;
   display: flex;
   justify-content: space-between;
 }
-#restaurants .restaurants__block .restaurants__items .restaurants__item .restaurants__description .restaurants__name .far:hover {
+#restaurants .restaurants__block .restaurants__item .restaurants__description .restaurants__name .far:hover {
   animation: keyframes-heart 2000ms forwards;
 }
-#restaurants .restaurants__block .restaurants__items .restaurants__item .restaurants__description .restaurants__location {
+#restaurants .restaurants__block .restaurants__item .restaurants__description .restaurants__location {
   font-weight: 100;
 }
 
